--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
+    <color name="purpleMeli">#602290</color>
+    <color name="pinkMeli">#A91390</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="seed">#FFE600</color>
+    <color name="green_light">#00A650</color>
     <color name="md_theme_light_primary">#6A5F00</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_primaryContainer">#FDE400</color>
