--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -209,26 +209,15 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                     android:orientation="horizontal">
-                    <LinearLayout
-                        android:layout_marginLeft="30dp"
-                        android:layout_width="60dp"
-                        android:background="@drawable/circleicons"
-                        android:layout_height="60dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:src="@drawable/ofertasicon"
-                            />
-                        <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="match_parent"
-                            android:textColor="@color/black"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="center"
-                            android:textSize="10sp"
-                            android:text="Ofertas"/>
-                    </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="200sp"
+                        android:layout_below="@+id/toolbar"
+                        android:id="@+id/recyclerIcons"
+                        app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
+                        android:orientation="horizontal"/>
+                    
                 </LinearLayout>
 
 
