--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -46,18 +47,20 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
+                <ImageButton
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="15dp"
-                    android:background="@drawable/systemuiconscart" />
+                    android:background="@drawable/systemuiconscart"
+                    android:onClick="cartView" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:gravity="center_vertical"
+                android:onClick="direction"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -76,10 +79,10 @@
                     android:textColor="@color/black"
                     android:textSize="10dp" />
 
-                <ImageView
+                <ImageButton
                     android:layout_width="11dp"
                     android:layout_height="11dp"
-                    android:background="@drawable/arrowleft" />
+                    android:background="@drawable/arrowleftshort" />
             </LinearLayout>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -199,44 +202,61 @@
                     android:src="@drawable/arrowleftwhite" />
             </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/viewPager"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.495"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-                    android:orientation="horizontal">
+            <LinearLayout
+                android:id="@+id/viewPager"
+                android:layout_width="413dp"
+                android:layout_height="59dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.495"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_height="200sp"
-                        android:layout_below="@+id/toolbar"
-                        android:id="@+id/recyclerIcons"
-                        app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
-                        android:orientation="horizontal"/>
-                </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerIcons"
+                    android:layout_width="match_parent"
+                    android:layout_height="60sp"
+                    android:layout_below="@+id/toolbar"
+                    android:orientation="horizontal"
+                    app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:gravity="center"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/viewPager">
+
                 <RelativeLayout
                     android:layout_width="350dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/addborder">
+
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/loreal"/>
+                        android:src="@drawable/loreal" />
                 </RelativeLayout>
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recicleCards"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.778"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.textfield.TextInputLayout>
 
