--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
+    <color name="btndiscover">#4B8FF6</color>
+    <color name="background">#EBEBEB</color>
     <color name="purpleMeli">#602290</color>
     <color name="pinkMeli">#A91390</color>
     <color name="white">#FFFFFF</color>
