Pantallas de compra y ubicacion

--- a/app/src/main/res/drawable/degradado.xml
+++ b/app/src/main/res/drawable/degradado.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="-50"
         android:startColor="@color/seed"
-        android:endColor="@color/white"
+        android:endColor="@color/background"
         android:type="linear">
     </gradient>
 </shape>
