--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -117,7 +117,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="313dp"
+            android:layout_width="300dp"
             android:layout_height="60dp"
             android:orientation="vertical"
             app:layout_constraintStart_toEndOf="@+id/circleactive"
@@ -194,4 +194,74 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/titleubi"
         tools:layout_editor_absoluteX="0dp" />
+
+    <LinearLayout
+        android:id="@+id/postal"
+        android:layout_width="380dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
+
+        <LinearLayout
+            android:layout_width="60dp"
+            android:layout_height="37dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="25dp"
+                android:src="@drawable/pepiconspencilpinpointcircle" />
+        </LinearLayout>
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="300dp"
+            android:layout_height="50dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/btndiscover"
+                android:text="Ingresa un codigo postal"/>
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout10"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginTop="4dp"
+        android:background="@color/background"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/postal"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/btndiscover">
+
+            <Button
+                android:id="@+id/back"
+                android:layout_width="370dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/btndiscover"
+                android:text="Aceptar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="MissingConstraints" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
