--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,15 +146,14 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:layout_marginRight="5dp"
                     android:src="@drawable/van" />
-
                 <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="55dp"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:text="Envío gratis"
                     android:textColor="@color/green_light"
-                    android:textSize="10sp" />
+                    android:textSize="12sp" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="200dp"
@@ -162,7 +161,7 @@
                     android:background="@color/white"
                     android:text="en millones de productos desde $299"
                     android:textColor="@color/black"
-                    android:textSize="10sp" />
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -179,15 +178,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginLeft="6dp"
                     android:layout_weight="1"
                     android:gravity="start|center_vertical"
                     android:text="Consigue envios gratis desde $149 con"
                     android:textColor="@color/white"
-                    android:textSize="11sp" />
+                    android:textSize="12sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -246,7 +244,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recicleCards"
                 android:layout_width="match_parent"
@@ -257,6 +254,79 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:background="@drawable/cuadradoborder"
+            android:id="@+id/lastView"
+            android:layout_width="360dp"
+            android:layout_height="160dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/lastText"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Inspirado en lo ultimo que viste"
+                android:textSize="13dp"
+                android:textStyle="bold"/>
+            <LinearLayout
+                android:id="@+id/linearLayout7"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/background"
+                android:orientation="horizontal" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
+                <LinearLayout
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="130dp"
+                    android:orientation="vertical"
+                    android:layout_height="130dp">
+                  <ImageView
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:src="@drawable/moderboard"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Kit de Actualizacion Gamer Ryzen 5 600g + Motherboard A520m"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:layout_marginTop="2dp"
+                        android:text="$ 3,759"
+                        android:textSize="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:layout_marginTop="2dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="24x $227"
+                        android:textSize="12dp"
+                        android:textColor="@color/green_light"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:layout_marginTop="2dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Envio gratis"
+                        android:textColor="@color/green_light"
+                        android:textStyle="bold"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
 
     </com.google.android.material.textfield.TextInputLayout>
 
