--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -46,7 +46,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textView"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/navbar" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textView2"
         android:textStyle="normal"
         android:layout_width="350dp"
@@ -70,7 +70,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textView3"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -109,7 +109,7 @@
             android:orientation="horizontal"
             tools:ignore="MissingConstraints">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="50dp"
@@ -124,14 +124,14 @@
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="4dp">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="CP 50263"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:text="Bravo-Instituto literario #20 - Toluca, Estado De México Rafael Murrieta - 7221234567"
@@ -149,7 +149,7 @@
             app:layout_constraintTop_toBottomOf="@+id/circleactive"
             tools:layout_editor_absoluteX="0dp" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:layout_width="199dp"
             android:layout_height="19dp"
             android:layout_marginStart="26dp"
@@ -173,7 +173,7 @@
         app:layout_constraintTop_toBottomOf="@+id/directions"
         tools:layout_editor_absoluteX="0dp" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/titleubi"
         android:layout_width="200dp"
         android:textSize="16sp"
@@ -211,7 +211,7 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="25dp"
@@ -221,7 +221,7 @@
             android:gravity="center"
             android:layout_width="300dp"
             android:layout_height="50dp">
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/btndiscover"
