Pantalla para informacion de productos

--- a/app/src/main/res/layout/list_elements.xml
+++ b/app/src/main/res/layout/list_elements.xml
@@ -11,6 +11,7 @@
     app:cardUseCompatPadding="true"
     >
     <LinearLayout
+        android:onClick="productView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="vertical"
