--- a/app/src/main/res/layout/activity_product_view.xml
+++ b/app/src/main/res/layout/activity_product_view.xml
@@ -82,4 +82,69 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/conttitle"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/navbar"
+        tools:layout_editor_absoluteX="0dp">
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nuevo | +500 vendidos"/>
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_marginLeft="120dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="califi"/>
+    </LinearLayout>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/title"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="21dp"
+        android:layout_marginRight="20dp"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Xtreme Pc Msi"
+        app:layout_constraintTop_toBottomOf="@+id/conttitle"/>
+
+    <LinearLayout
+        android:id="@+id/moresale"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        android:orientation="horizontal">
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_marginLeft="20dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:text="MAS VENDIDO"/>
+        <com.google.android.material.textview.MaterialTextView
+            android:textSize="10sp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="3° en Computadoras y Servidores  Xtreme PC Gaming"/>
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:orientation="vertical"
+        android:id="@+id/images"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/moresale">
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imageView"
+            android:layout_width="300dp"
+            android:padding="10dp"
+            android:layout_height="300dp"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
