--- a/app/src/main/res/layout/activity_product_view.xml
+++ b/app/src/main/res/layout/activity_product_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".productView">
@@ -87,27 +88,60 @@
         android:layout_height="wrap_content"
         android:id="@+id/conttitle"
         android:orientation="horizontal"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/navbar"
         tools:layout_editor_absoluteX="0dp">
         <com.google.android.material.textview.MaterialTextView
             android:layout_marginLeft="20dp"
+            android:textColor="@color/textgray"
+            android:textSize="9dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nuevo | +500 vendidos"/>
         <com.google.android.material.textview.MaterialTextView
-            android:layout_marginLeft="120dp"
+            android:textColor="@color/textgray"
+            android:layout_marginLeft="150dp"
             android:layout_width="wrap_content"
+            android:layout_marginRight="2dp"
             android:layout_height="wrap_content"
-            android:text="califi"/>
+            android:textSize="9dp"
+            android:text="4.7"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:background="@drawable/starfill"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:background="@drawable/starfill"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:background="@drawable/starfill"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:background="@drawable/starfill"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:background="@drawable/starhalfoutline"/>
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:textColor="@color/textgray"
+            android:layout_height="wrap_content"
+            android:textSize="9dp"
+            android:layout_marginLeft="2dp"
+            android:text="(200)"/>
     </LinearLayout>
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/title"
+        android:id="@+id/titleProcut"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="21dp"
         android:layout_marginRight="20dp"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Xtreme Pc Msi"
@@ -118,33 +152,175 @@
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/titleProcut"
         android:orientation="horizontal">
         <com.google.android.material.textview.MaterialTextView
+            android:padding="1dp"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:background="@color/morShaleOrange"
             android:layout_marginLeft="20dp"
-            android:layout_width="100dp"
+            android:layout_marginRight="20dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
+            android:textSize="13sp"
             android:text="MAS VENDIDO"/>
         <com.google.android.material.textview.MaterialTextView
-            android:textSize="10sp"
+            android:textSize="12sp"
+            android:textColor="@color/blueAnim"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="3° en Computadoras y Servidores  Xtreme PC Gaming"/>
+            android:text="3° en Computadoras y Servidores"/>
     </LinearLayout>
     
     <LinearLayout
         android:layout_marginTop="15dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:id="@+id/images"
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/moresale">
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageView"
             android:layout_width="300dp"
-            android:padding="10dp"
-            android:layout_height="300dp"/>
+            android:layout_marginLeft="40dp"
+            android:src="@drawable/moderboard"
+            android:layout_height="350dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <LinearLayout
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@drawable/circlegray">
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/mdiheartoutline"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="230dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:background="@drawable/circlegray">
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/shareicon"/>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/priceCont"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/images"
+        tools:layout_editor_absoluteX="0dp">
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/precio"
+            android:layout_marginLeft="20dp"
+            android:textStyle="bold"
+            android:textSize="40sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="$4000"/>
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/green_light"
+            android:layout_width="100dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:text="45% OFF"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/priceCont"
+        android:layout_marginLeft="20dp"
+        tools:layout_editor_absoluteX="0dp">
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/msi"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="En 12x $"
+            android:textStyle="bold"/>
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="IVA Incluido"
+            />
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Ver los metodos de pago"
+            android:textColor="@color/blueAnim"
+            android:layout_marginTop="7dp"/>
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/green_light"
+                android:text="Llega gratis "/>
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="el míercoles "/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/pepiconspencilpinpointcircle"/>
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/blueAnim"
+                android:text=" Más formas de entrega"/>
+        </LinearLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:text="Stock disponible"/>
+        <LinearLayout
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Almacenado y enviado por "/>
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/claritylightningsolid"/>
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="FULL"
+                android:textStyle="italic"
+                android:textColor="@color/green_light"
+                android:textSize="13dp"/>
+        </LinearLayout>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
