Se crea un splash screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,8 @@
     <style name="Button.blue" parent="ThemeOverlay.AppCompat">
         <item name="colorAccent">@color/btndiscover</item>
     </style>
+    
+    <style name="splashtheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
 </resources>
