--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 
 <resources>
     <color name="textgray">#80777777</color>
+    <color name="txttermy">#804E4E4E</color>
     <color name="itemBack">#F5F5F5</color>
     <color name="blueAnim">#2968C8</color>
     <color name="morShaleOrange">#f73</color>
@@ -12,6 +13,8 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="seed">#FFE600</color>
+    <color name="whitepurple">#F5F1FF</color>
+    <color name="purplepurple">#F5F1FF</color>
     <color name="green_light">#00A650</color>
     <color name="md_theme_light_primary">#6A5F00</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
